--- a/Frontend/index.html
+++ b/Frontend/index.html
@@ -4,7 +4,12 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="preload" href="/static/media/mfllogo_2.hash.png" as="image" />
+
+    <link
+      rel="preload"
+      href="../Frontend/src/Appcomponents/Images/background.webp"
+      as="image"
+    />
     <title>DoiTung Elearning</title>
     <script type="text/javascript">
       function googleTranslateElementInit() {
