--- a/Frontend/index.html
+++ b/Frontend/index.html
@@ -5,24 +5,14 @@
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="preload" href="/static/media/mfllogo_2.hash.png" as="image" />
+    <link
+      rel="preload"
+      href="/fonts/Inter.var.woff2"
+      as="font"
+      type="font/woff2"
+      crossorigin="anonymous"
+    />
     <title>DoiTung Elearning</title>
-    <script type="text/javascript">
-      function googleTranslateElementInit() {
-        console.log("Google Translate initialized"); // Debugging
-        new google.translate.TranslateElement(
-          {
-            pageLanguage: "en",
-            includedLanguages: "en,th",
-            layout: google.translate.TranslateElement.InlineLayout.SIMPLE,
-          },
-          "google_translate_element"
-        );
-      }
-    </script>
-    <script
-      type="text/javascript"
-      src="https://translate.google.com/translate_a/element.js?cb=googleTranslateElementInit"
-    ></script>
   </head>
   <body>
     <div id="root"></div>
